--- a/src/css/main.css
+++ b/src/css/main.css
@@ -213,77 +213,13 @@ html {
   scroll-behavior: smooth;
 }
 
-.login-page {
-  display: grid;
-  place-items: center;
-  height: 100dvh;
-}
-.login-page__containers {
-  display: flex;
-  width: 20rem;
-  height: 20rem;
-  position: relative;
-  border-radius: 0.5rem;
-  color: black;
-  transform: rotateY(0deg);
-  transition: 500ms ease-in-out;
-  -webkit-perspective: 1000px;
-  -moz-perspective: 1000px;
-  -ms-perspective: 1000px;
-  perspective: 1000px;
-}
-.login-page__form-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-  height: 100%;
-  padding: 1.5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: white;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-}
-.login-page__form-container--active {
-  opacity: 1;
-}
-.login-page__form-container h1 {
-  font-size: 2rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
-}
-.login-page__message-container {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  z-index: 999;
-  width: 50%;
-  height: 100%;
-  background-color: red;
-  transition: 250ms ease-in-out;
-}
-.login-page__message-container--left {
-  left: 0;
-}
-.login-page__message-container * {
-  opacity: 0;
-  animation: fade 250ms ease-in-out forwards;
-}
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+body {
+  overscroll-behavior: none;
 }
 
 .header {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
   gap: 0.75rem;
   width: min(80rem, 100%);
@@ -349,12 +285,6 @@ html {
 .header__nav-sub-list--show {
   opacity: 1;
   visibility: visible;
-}
-@media (min-width: 48rem) {
-  .header {
-    flex-direction: row;
-    justify-content: space-between;
-  }
 }
 
 .searchbar {
@@ -527,6 +457,10 @@ html {
   /* background-color: hsl(0, 0%, 0%, 0.3);
   backdrop-filter: blur(4px); */
 }
+.carousel__item-info:first-of-type {
+  opacity: 0;
+  animation: fade-in 600ms ease-in forwards 300ms;
+}
 @media (max-width: 60rem) {
   .carousel__item-info {
     width: min(30rem, 100%);
@@ -565,12 +499,14 @@ html {
   right: 0;
   bottom: 0;
   z-index: 10;
-  width: 50vw;
+  width: 50%;
   height: 12rem;
+  opacity: 0;
   -webkit-perspective: 1500px;
   -moz-perspective: 1500px;
   -ms-perspective: 1500px;
   perspective: 1500px;
+  animation: fade-in 500ms ease-in forwards 600ms;
 }
 @media (max-width: 60rem) {
   .carousel__slider {
@@ -589,8 +525,8 @@ html {
   border-radius: 0.25rem;
   overflow: hidden;
   cursor: pointer;
-  transition: opacity 600ms ease-in, width 300ms ease-in, height 300ms ease-in, z-index 300ms ease-in, transform 300ms ease-in;
   transform: translateZ(-750px);
+  transition: 300ms linear;
 }
 .carousel__slider-item--active {
   opacity: 1;
@@ -671,15 +607,17 @@ html {
 }
 
 @keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
+  100% {
     opacity: 1;
   }
 }
+* {
+  outline: 1px solid lime;
+}
+
 .slider {
   --card-width: 10rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -709,11 +647,15 @@ html {
   align-items: center;
   gap: 0.5rem;
 }
-.slider__view-all:hover {
-  opacity: 0.8;
+@media (min-width: 60rem) {
+  .slider__view-all:hover {
+    opacity: 0.8;
+  }
 }
-.slider__view-all:hover .slider__arrow-right {
-  animation: arrowRight 1000ms ease infinite;
+@media (min-width: 60rem) {
+  .slider__view-all:hover .slider__arrow-right {
+    animation: arrowRight 1000ms ease infinite;
+  }
 }
 @keyframes arrowRight {
   0%, 100% {
@@ -738,8 +680,6 @@ html {
 .slider__link {
   flex: 0 0 var(--card-width);
   scroll-snap-align: start;
-  -webkit-user-drag: none;
-  user-drag: none;
 }
 .slider__card {
   display: flex;
@@ -829,21 +769,27 @@ html {
 .slider__btn--next {
   right: -1px;
 }
-.slider__btn:hover {
-  background-color: hsla(0, 0%, 0%, 0.5);
-  backdrop-filter: blur(10px);
+@media (min-width: 60rem) {
+  .slider__btn:hover {
+    background-color: hsla(0, 0%, 0%, 0.5);
+    backdrop-filter: blur(10px);
+  }
+}
+@media (min-width: 60rem) {
+  .slider__card:hover .slider__card-img {
+    scale: 0.9;
+  }
+  .slider__card:hover .slider__card-info {
+    opacity: 1;
+    z-index: 2;
+  }
+  .slider__card--reverse:hover .slider__card-info {
+    transform: translateX(calc(var(--card-width) * -1.5));
+    border-radius: 0.25rem 0 0 0.25rem;
+  }
 }
 .slider__card:hover .slider__card-img {
   filter: brightness(0.8);
-  scale: 0.9;
-}
-.slider__card:hover .slider__card-info {
-  opacity: 1;
-  z-index: 2;
-}
-.slider__card--reverse:hover .slider__card-info {
-  transform: translateX(calc(var(--card-width) * -1.5));
-  border-radius: 0.25rem 0 0 0.25rem;
 }
 
 .content {
@@ -912,6 +858,7 @@ html {
 
 .content-section {
   display: flex;
+  max-width: 100vw;
 }
 .content-section__label-container {
   writing-mode: vertical-rl;
